[project]
name = "nlp-presentation"
version = "0.1.0"
description = "Sentiment Analysis: From Lexicons to Transformers — a hands-on comparative study"
authors = [
    {name = "Student", email = "noreply@example.com"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "nbconvert>=7.16.5",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
    "datasets>=3.2.0",
    "transformers>=4.47.0",
    "torch>=2.11.0",
    "vaderSentiment>=3.3.2",
    "nltk>=3.9.1",
    "tqdm>=4.67.1",
    "huggingface-hub>=0.27.0",
    "accelerate>=1.2.1",
]

[tool.pdm]
distribution = false
